--- a/TODO
+++ b/TODO
@@ -6,4 +6,4 @@ Por ordem de importância:
     - Imprimir data correta nos pacotes
     - Imprimir última data de modificação correta sobre os arquivos enviados
 [OK]- Detectar formato do arquivo enviado (html, png)
-    - Arrumar DEFINES
+[OK]- Arrumar DEFINES
