--- a/TODO
+++ b/TODO
@@ -7,6 +7,6 @@ Por ordem de importância:
       - Usar alocação dinâmica [não tão importante, mas fácil de fazer]
     - LEIAME
 [OK]- Imprimir data correta nos pacotes
-    - Imprimir última data de modificação correta sobre os arquivos enviados
+[OK]- Imprimir última data de modificação correta sobre os arquivos enviados
 [OK]- Detectar formato do arquivo enviado (html, png)
 [OK]- Arrumar DEFINES
