--- a/TODO
+++ b/TODO
@@ -3,8 +3,7 @@ Por ordem de importância:
 [OK]- Suporte a enviar arquivos/pacotes arbitrariamente grandes
     - Método POST
       Wil notes:
-      - Pegar o "nome" dos valores enviados pelo POST também [importante]
-      - Usar alocação dinâmica [não tão importante, mas fácil de fazer]
+      - Pegar o "nome" dos valores enviados pelo POST também
 [OK]- LEIAME
 [OK]- Imprimir data correta nos pacotes
 [OK]- Imprimir última data de modificação correta sobre os arquivos enviados
